Rigidbody Calculate Mass Sets Mass to 0 #59884

Closed
opened 2018-12-27 08:07:30 +01:00 by Finn Bear · 5 comments

System Information
Operating system: Ubuntu 18.04
Graphics card: GTX 1080 Ti

Blender Version
Broken: 2.80 (6d89337257 from December 24/25)
Worked: 2.79

Short description of error
The "calculate mass" operater sets selected ridid bodies' mass to 0 rather than the correct value.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file (as simple as possible).

  1. press space and run the add rigid bodies operator on the default cube
  2. nagivate to the physics panel and observe that mass is set to 1, the default
  3. press space and apply the calculate mass operator on the default cube
  4. select any material, but "Broken Glass" is what I chose
  5. observe that the mass now 0

Note: My blend file used metric units

**System Information** Operating system: Ubuntu 18.04 Graphics card: GTX 1080 Ti **Blender Version** Broken: 2.80 (6d89337257b6 from December 24/25) Worked: 2.79 **Short description of error** The "calculate mass" operater sets selected ridid bodies' mass to 0 rather than the correct value. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file (as simple as possible). 1) press space and run the add rigid bodies operator on the default cube 2) nagivate to the physics panel and observe that mass is set to 1, the default 3) press space and apply the calculate mass operator on the default cube 4) select any material, but "Broken Glass" is what I chose 5) observe that the mass now 0 Note: My blend file used metric units
Author

Added subscriber: @finnb

Added subscriber: @finnb
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2018-12-27 09:10:14 +01:00
Member

Confirmed, checking...

Confirmed, checking...

This issue was referenced by be1b32e4e4

This issue was referenced by be1b32e4e49e6f8b51aca193c8a2399af893008f
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59884
No description provided.