Fix T59884: Rigidbody Calculate Mass Sets Mass to 0

rigidbody_get_mesh() needs an evaluated object

Reviewers: sergey, brecht

Maniphest Tasks: T59884

Differential Revision: https://developer.blender.org/D4125